--- a/assets/stylesheet/index.css
+++ b/assets/stylesheet/index.css
@@ -837,9 +837,10 @@ img.logo-one {
 
 .btn_demo {
   padding: 0.9rem 0;
+  background: none;
   border: none;
-  background-color: var(--gris-oscuro-azulado);
-  color: var(--beige-coral);
+  color: var(--gris-oscuro-azulado);
+  border: 1px solid var(--gris-oscuro-azulado);
 }
 
 .btn_repo {
@@ -860,7 +861,7 @@ img.logo-one {
 }
 
 .container_btn--proyectos .btn_demo:hover {
-  background-color: var(--color-dark-gray);
+  background: var(--beige-coral);
   box-shadow: 0px 13px 33px -14px rgba(0, 0, 0, 0.75);
   transition: all 0.4s ease;
 }
